--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 												<img src="images/my/sina.png" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="#" class="fa fa-link"></a>
+														<a href="/sinaNewsApp" class="fa fa-link"></a>
 														<h4>新浪新闻APP</h4>
 													</div>
 											</div>
