--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 												<img src="images/my/sina.png" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/sinaNewsApp" class="fa fa-link"></a>
+														<a href="/sinaNewsApp" target="_blank" class="fa fa-link"></a>
 														<h4>新浪新闻APP</h4>
 													</div>
 											</div>
@@ -128,7 +128,7 @@
 												<img src="images/my/烛台.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/dangdangwang" class="fa fa-link"></a>
+														<a href="/dangdangwang" target="_blank" class="fa fa-link"></a>
 														<h4>当当网</h4>
 													</div>
 											</div>
@@ -138,7 +138,7 @@
 												<img src="images/my/花瓣.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/weixin" class="fa fa-link"></a>
+														<a href="/weixin" target="_blank" class="fa fa-link"></a>
 														<h4>微信</h4>
 													</div>
 											</div>
@@ -150,7 +150,7 @@
 												<img src="images/my/iclude.png" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/iCloud" class="fa fa-link"></a>
+														<a href="/iCloud" target="_blank" class="fa fa-link"></a>
 														<h4>iCloud Reminde</h4>
 													</div>
 											</div>
@@ -161,7 +161,7 @@
 												<img src="images/my/kele.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/todos" class="fa fa-link"></a>
+														<a href="/todos" target="_blank" class="fa fa-link"></a>
 														<h4>todos</h4>
 													</div>
 											</div>
@@ -172,7 +172,7 @@
 												<img src="images/my/store.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="#" class="fa fa-link"></a>
+														<a href="/bdstore" target="_blank" class="fa fa-link"></a>
 														<h4>百度未来商店</h4>
 													</div>
 											</div>
@@ -183,7 +183,7 @@
 												<img src="images/my/jingdong.png" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/jd" class="fa fa-link"></a>
+														<a href="/jd" target="_blank" class="fa fa-link"></a>
 														<h4>京东首页</h4>
 													</div>
 											</div>
@@ -194,7 +194,7 @@
 												<img src="images/my/yintai.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/yintai" class="fa fa-link"></a>
+														<a href="/yintai" target="_blank" class="fa fa-link"></a>
 														<h4>银泰首页</h4>
 													</div>
 											</div>
@@ -205,7 +205,7 @@
 												<img src="images/my/apple.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/apple" class="fa fa-link"></a>
+														<a href="/apple" target="_blank" class="fa fa-link"></a>
 														<h4>苹果首页</h4>
 													</div>
 											</div>
@@ -218,7 +218,7 @@
 												<img src="images/my/qq.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/qq_music" class="fa fa-link"></a>
+														<a href="/qq_music" target="_blank" class="fa fa-link"></a>
 														<h4>Music</h4>
 													</div>
 											</div>
@@ -229,7 +229,7 @@
 												<img src="images/my/fullpage.png" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/wangyi" class="fa fa-link"></a>
+														<a href="/wangyi" target="_blank" class="fa fa-link"></a>
 														<h4>网易邮箱6.0</h4>
 													</div>
 											</div>
@@ -240,7 +240,7 @@
 												<img src="images/my/clock.png" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/clock" class="fa fa-link"></a>
+														<a href="/clock" target="_blank" class="fa fa-link"></a>
 														<h4>Clock</h4>
 													</div>
 											</div>
@@ -252,7 +252,7 @@
 												<img src="images/my/wuziqi.png" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/five-in-row" class="fa fa-link"></a>
+														<a href="/five-in-row" target="_blank" class="fa fa-link"></a>
 														<h4>五子棋</h4>
 													</div>
 											</div>
@@ -263,7 +263,7 @@
 												<img src="images/my/she.png" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/snake" class="fa fa-link"></a>
+														<a href="/snake" target="_blank" class="fa fa-link"></a>
 														<h4>贪吃蛇</h4>
 													</div>
 											</div>
@@ -274,7 +274,7 @@
 												<img src="images/my/saolei.png" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/saolei" class="fa fa-link"></a>
+														<a href="/saolei" target="_blank" class="fa fa-link"></a>
 														<h4>扫雷</h4>
 													</div>
 											</div>
@@ -285,7 +285,7 @@
 												<img src="images/my/打字.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/dazigame" class="fa fa-link"></a>
+														<a href="/dazigame" target="_blank" class="fa fa-link"></a>
 														<h4>打字</h4>
 													</div>
 											</div>
