--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 									    <div class="iso-box graphic photoshop col-md-3 col-sm-6 col-xs-12 no-padding">
 											<div class="portfolio-thumb">
-												<img src="images/my/sina.png" class="fluid-img" alt="portfolio img">
+												<img src="images/my/sina.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
 														<a href="/sinaNewsApp" target="_blank" class="fa fa-link"></a>
@@ -125,7 +125,7 @@
 										</div>
 										<div class="iso-box graphic photoshop col-md-3 col-sm-6 col-xs-12 no-padding">
 											<div class="portfolio-thumb">
-												<img src="images/my/烛台.jpg" class="fluid-img" alt="portfolio img">
+												<img src="images/my/当当.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
 														<a href="/dangdangwang" target="_blank" class="fa fa-link"></a>
@@ -135,7 +135,7 @@
 										</div>  
 										<div class="iso-box graphic photoshop col-md-3 col-sm-6 col-xs-12 no-padding">
 											<div class="portfolio-thumb">
-												<img src="images/my/花瓣.jpg" class="fluid-img" alt="portfolio img">
+												<img src="images/my/weixin.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
 														<a href="/weixin" target="_blank" class="fa fa-link"></a>
@@ -158,7 +158,7 @@
 
 										<div class="iso-box graphic photoshop col-md-3 col-sm-6 col-xs-12 no-padding">
 											<div class="portfolio-thumb">
-												<img src="images/my/kele.jpg" class="fluid-img" alt="portfolio img">
+												<img src="images/my/todos.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
 														<a href="/todos" target="_blank" class="fa fa-link"></a>
