--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 												<img src="images/my/store.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/bdstore" target="_blank" class="fa fa-link"></a>
+														<a href="/baidu_store" target="_blank" class="fa fa-link"></a>
 														<h4>百度未来商店</h4>
 													</div>
 											</div>
