--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 												<img src="images/my/qq.jpg" class="fluid-img" alt="portfolio img">
 													<div class="portfolio-overlay">
 														<a href="#" class="fa fa-search"></a>
-														<a href="/qq_music" target="_blank" class="fa fa-link"></a>
+														<a href="/QQmusic" target="_blank" class="fa fa-link"></a>
 														<h4>Music</h4>
 													</div>
 											</div>
