--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 							<img src="images/post-img2.jpg" alt="">
 							<a href="#" class="link fa fa-link"></a>
 							<section>
-								<h3><a href="#">山西星光传媒科技有限公司  [2015.5~2016-6]</a></h3>
+								<h3><a href="#">山西创梦科技有限公司  [2015.5~2016-6]</a></h3>
 								<aside class="text">担任前端工程师 [移动App的开发和布局以及web前端的开发] </aside>
 								<p><i class="fa fa-clock-o"></i>2015.1~2016-6 <i class="fa fa-comments"></i>18 Month</p>
 							</section>
@@ -372,7 +372,7 @@
 								 </p>
 								<br>
 								<p class="impor">TEL:18334795310</p>
-								<p class="impor">E-MEIL:1595466043@qq.com</p>
+								<p class="impor">E-MAIL:1595466043@qq.com</p>
 							</div>
 						</div>
 					</div>
@@ -386,7 +386,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="wow bounceIn">Drop Us a Line</h2>
+						<h2 class="wow bounceIn">Drop Me a Line</h2>
 						<hr>
 					</div>
 					<div class="col-md-2"></div>
