--- a/index.html
+++ b/index.html
@@ -310,25 +310,15 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-6 col-sm-6">
-						<div class="post wow bounceInDown">
-							<img src="images/post-img1.jpg" alt="">
-							<a href="#" class="link fa fa-link"></a>
-							<section>
-								<h3><a href="#">山西西柚科技有限公司 [2014-12~2015-4]</a></h3>
-								<aside class="text">担任前端工程师 [主要负责页面布局和动效的添加 ] </aside>
-								<p><i class="fa fa-clock-o"></i> 2014-3~2014-11 <i class="fa fa-comments"></i>8 Month</p>
-							</section>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-6">
+					
+					<div class="col-md-12 col-sm-12">
 						<div class="post wow bounceInDown">
 							<img src="images/post-img2.jpg" alt="">
 							<a href="#" class="link fa fa-link"></a>
 							<section>
-								<h3><a href="#">山西创梦科技有限公司  [2015.5~2016-6]</a></h3>
-								<aside class="text">担任前端工程师 [移动App的开发和布局以及web前端的开发] </aside>
-								<p><i class="fa fa-clock-o"></i>2015.1~2016-6 <i class="fa fa-comments"></i>18 Month</p>
+								<h3><a href="#">山西西柚科技有限公司  [2015.2~2016-6]</a></h3>
+								<aside class="text">担任前端工程师 [主要负责页面布局和动效的添加;移动App的开发和布局以及web前端的开发] </aside>
+								<p><i class="fa fa-clock-o"></i>2015.2~2016-6 <i class="fa fa-comments"></i>16 Month</p>
 							</section>
 						</div>
 					</div>		
