--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 					
 					<div class="col-md-12 col-sm-12">
 						<div class="post wow bounceInDown">
-							<img src="images/post-img2.jpg" alt="">
+							<img src="images/my/experience.jpg" alt="">
 							<a href="#" class="link fa fa-link"></a>
 							<section>
 								<h3><a href="#">山西西柚科技有限公司  [2015.2~2016-6]</a></h3>
